@startuml
class Global_Var {
  - WHITE: tuple
  - BLACK: tuple
  - WIDTH: int
  - HEIGHT: int
  - CELL_SIZE: int
}

class Laberinto {
  - maze: list
  - rows: int
  - cols: int
  + load_maze(filename: str)
  + draw(screen)
}

class Personaje {
  - x: int
  - y: int
  + draw(screen)
}

class Meta {
  - x: int
  - y: int
  + draw(screen)
}

class Juego {
  - laberinto: Laberinto
  - personaje: Personaje
  - meta: Meta
  + run()
}

Global_Var -- Laberinto
Global_Var -- Personaje
Global_Var -- Meta
Juego o-- Laberinto
Juego o-- Personaje
Juego o-- Meta
@enduml
